2021-02-24 Markus Gans  <guru.mail@muenster.de>
	* Fixed the incorrect display on terminals without 
	  UTF-8 character encoding

2021-02-20 Markus Gans  <guru.mail@muenster.de>
	* Optimize terminal output buffer queue with differencing
	  for strings, and control characters and control sequences

2021-02-09 Markus Gans  <guru.mail@muenster.de>
	* Added support for combined unicode characters
	* Added a unit test for the FTermBuffera class
	* Added a unit test for the FTterm functions

2020-12-31  Markus Gans  <guru.mail@muenster.de>
	* Refactoring to scoped enumerations

2020-11-18  Markus Gans  <guru.mail@muenster.de>
	* The terminal update rate is now limited to 60 Hz

2020-11-14  Markus Gans  <guru.mail@muenster.de>
	* Version 0.7.1
	* Bugfix: The cursor position was not changed anymore 
	  if there was no change to the content
	* Forcing a direct update for faster terminal output

2020-11-07  Markus Gans  <guru.mail@muenster.de>
	* Version 0.7.0

2020-11-04  Markus Gans  <guru.mail@muenster.de>
	* Elimination of unnecessary terminal flushes

2020-11-03  Markus Gans  <guru.mail@muenster.de>
	* Use FIONREAD to get the number of characters available 
	  for reading on stdin

2020-11-02  Markus Gans  <guru.mail@muenster.de>
	* Non-blocking reading before timeout after keystroke
	* Every fourth event processing causes a terminal flush
	* Call of TIOCLINUX only in the Linux console

2020-11-01  Markus Gans  <guru.mail@muenster.de>
	* Now FINAL CUT queues keyboard and mouse input to speed up 
	  the processing of widget events

2020-10-22  Markus Gans  <guru.mail@muenster.de>
	* Repair terminal update skipping

2020-10-20  Markus Gans  <guru.mail@muenster.de>
	* For fast mouse movements the keyboard interval was increased 
	  from 13.3 to 30 Hz

2020-10-19  Markus Gans  <guru.mail@muenster.de>
	* Optimize the terminal output speed

2020-10-17  Markus Gans  <guru.mail@muenster.de>
	* Fixes unit test segfault

2020-10-11  Markus Gans  <guru.mail@muenster.de>