@@ -3,7 +3,7 @@
 *                                                                      *
 * This file is part of the FINAL CUT widget toolkit                    *
 *                                                                      *
-* Copyright 2019-2020 Markus Gans                                      *
+* Copyright 2019-2021 Markus Gans                                      *
 *                                                                      *
 * FINAL CUT is free software; you can redistribute it and/or modify    *
 * it under the terms of the GNU Lesser General Public License as       *
@@ -19,6 +19,9 @@
 * License along with this program.  If not, see                        *
 * <http://www.gnu.org/licenses/>.                                      *
 ***********************************************************************/
+
+#include <term.h>
+#undef buttons  // from term.h
 
 #include <limits>
 #include <string>
@@ -111,7 +114,6 @@ class FSystemTest : public finalcut::FSystem
     FILE*            fopen (const char*, const char*) override;
     int              fclose (FILE*) override;
     int              putchar (int) override;
-    int              tputs (const char*, int, fn_putc) override;
     uid_t            getuid() override;
     uid_t            geteuid() override;
     int              getpwuid_r ( uid_t, struct passwd*, char*
@@ -1375,12 +1377,6 @@ int FSystemTest::putchar (int c)
   std::cerr << "Call: putchar (" << c << ")\n";
   characters.push_back(c);
   return 1;
-}
-
-//----------------------------------------------------------------------
-int FSystemTest::tputs (const char* str, int affcnt, fn_putc putc)
-{
-  return ::tputs (str, affcnt, putc);
 }
 
 //----------------------------------------------------------------------
