@@ -1,3 +1,9 @@
+2021-02-28 Markus Gans  <guru.mail@muenster.de>
+	* Removing the termcap library from the header files so 
+	  that FINAL CUT programs are not affected by the preprocessor 
+	  #define macros.
+	  Many thanks to Zhenyu Zhang for this optimization suggestion
+
 2021-02-24 Markus Gans  <guru.mail@muenster.de>
 	* Fixed the incorrect display on terminals without 
 	  UTF-8 character encoding
